--- a/app/css/screen.css
+++ b/app/css/screen.css
@@ -281,6 +281,7 @@ html {
   font-style: normal; }
 
 body {
+  min-width: 320px;
   font-family: "National-Light", Arial, sans-serif;
   font-size: 15px;
   line-height: 1.3;
@@ -315,6 +316,9 @@ a {
     content: " ";
     display: table;
     clear: both; }
+  @media only screen and (min-width: 767px) {
+    .layout {
+      margin-bottom: 60px; } }
 
 @media only screen and (min-width: 767px) {
   .section {
@@ -324,7 +328,7 @@ a {
 @media only screen and (min-width: 767px) {
   .aside {
     float: right;
-    width: 38%; } }
+    width: 39%; } }
 
 .header {
   min-height: 68px;
@@ -357,6 +361,9 @@ a {
 .nav {
   float: right;
   margin-top: 30px; }
+  @media only screen and (min-width: 767px) {
+    .nav {
+      margin-top: 35px; } }
   .nav__btn {
     height: 22px;
     padding: 0 5px;
@@ -369,8 +376,75 @@ a {
       .nav__btn {
         height: 26px;
         font-size: 21px; } }
+    @media only screen and (min-width: 767px) {
+      .nav__btn {
+        display: none; } }
   .nav__list {
-    display: none; }
+    display: none;
+    float: right; }
+    @media only screen and (min-width: 767px) {
+      .nav__list {
+        display: block; } }
+  .nav__group {
+    float: left;
+    margin-left: 60px; }
+    .nav__group:first-child {
+      margin: 0; }
+  .nav__link {
+    float: left;
+    margin-left: 20px;
+    font-family: "National-Regular", Arial, sans-serif;
+    font-size: 16px;
+    color: #000;
+    text-decoration: none; }
+    .nav__link:first-child {
+      margin: 0; }
+
+.content {
+  margin-bottom: 30px;
+  line-height: 1.4; }
+  @media only screen and (min-width: 719px) {
+    .content {
+      margin-bottom: 50px;
+      line-height: 1.8; } }
+  .content h1,
+  .content h2,
+  .content h3,
+  .content h3,
+  .content h4,
+  .content h5,
+  .content h6 {
+    font-family: "National-Medium", Arial, sans-serif;
+    font-weight: 400; }
+  .content h4 {
+    font-size: 18px; }
+    @media only screen and (min-width: 719px) {
+      .content h4 {
+        margin-bottom: 20px;
+        font-size: 24px; } }
+  .content h6 {
+    font-size: 15px;
+    color: #2BC1D6; }
+    @media only screen and (min-width: 719px) {
+      .content h6 {
+        font-size: 18px; } }
+  .content p {
+    margin-bottom: 20px; }
+    @media only screen and (min-width: 719px) {
+      .content p {
+        margin-bottom: 40px; } }
+  .content img {
+    max-width: 100%; }
+  .content table {
+    max-width: 490px;
+    margin: 0 auto; }
+    .content table th,
+    .content table td {
+      padding: 15px 10px;
+      border: 1px solid #cccdd0;
+      text-align: center; }
+    .content table th {
+      font-family: "National-Semibold", Arial, sans-serif; }
 
 .author {
   margin-bottom: 5px;
@@ -384,6 +458,11 @@ a {
       margin-bottom: 15px;
       padding-bottom: 13px;
       border-bottom: 1px solid #f1f2f3; } }
+  @media only screen and (min-width: 767px) {
+    .author {
+      margin-bottom: 20px;
+      padding-bottom: 0;
+      border: none; } }
   .author__ava {
     float: left;
     width: 46px;
@@ -425,6 +504,15 @@ a {
   @media only screen and (min-width: 719px) {
     .price {
       margin-bottom: 40px; } }
+  @media only screen and (min-width: 767px) {
+    .price {
+      margin-bottom: 15px;
+      padding: 10px 0 15px;
+      border-bottom: 1px solid #f1f2f3;
+      font-family: "National-Extrabold", Arial, sans-serif;
+      text-align: left;
+      font-size: 30px;
+      color: #231F20; } }
 
 .slider {
   position: relative;
@@ -434,7 +522,9 @@ a {
       margin: 0 -35px 40px; } }
   @media only screen and (min-width: 767px) {
     .slider {
-      margin: 0 0 40px; } }
+      margin: 0 0 40px;
+      padding-bottom: 40px;
+      border-bottom: 1px solid #f1f2f3; } }
   .slider__list {
     padding-bottom: 20px;
     font-size: 0;
@@ -536,6 +626,10 @@ a {
   .product__type,
   .product__title {
     text-align: center; }
+    @media only screen and (min-width: 767px) {
+      .product__type,
+      .product__title {
+        text-align: left; } }
   .product__type {
     font-size: 16px;
     letter-spacing: 3px; }
@@ -545,7 +639,7 @@ a {
     font-size: 28px; }
     @media only screen and (min-width: 719px) {
       .product__title {
-        margin-bottom: 35px; } }
+        margin-bottom: 30px; } }
   .product__options {
     margin-bottom: 30px; }
   .product__msg {
@@ -558,6 +652,11 @@ a {
   .product__btn {
     width: 100%;
     margin-bottom: 7px; }
+  @media only screen and (min-width: 767px) {
+    .product__content {
+      margin-bottom: 20px;
+      padding-bottom: 30px;
+      border-bottom: 1px solid #f1f2f3; } }
 
 .option {
   margin-bottom: 20px;
@@ -676,6 +775,36 @@ a {
   font-size: 24px;
   color: #fff;
   letter-spacing: 2px; }
+  .btn:hover {
+    background: #ef4f8d; }
+
+.tabs__nav {
+  display: none;
+  margin-bottom: 25px;
+  font-size: 0; }
+  @media only screen and (min-width: 767px) {
+    .tabs__nav {
+      display: block; } }
+
+.tabs__link {
+  display: inline-block;
+  margin-right: 40px;
+  padding: 0 10px;
+  vertical-align: top;
+  text-decoration: none;
+  text-align: center; }
+  .tabs__link.is-active .tabs__link-title {
+    border-color: #2BC1D6; }
+  .tabs__link-icon {
+    margin-bottom: 7px; }
+    .tabs__link-icon .icon {
+      font-size: 30px; }
+  .tabs__link-title {
+    border-bottom: 4px solid transparent;
+    font-family: "National-Regular", Arial, sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: #000; }
 
 .tabs__title {
   margin: 0 -20px 20px;
@@ -691,53 +820,20 @@ a {
       padding: 10px 35px; } }
   @media only screen and (min-width: 767px) {
     .tabs__title {
-      display: none; } }
+      margin: 0 0 30px;
+      padding: 0;
+      background: none;
+      text-align: left;
+      font-size: 26px;
+      color: #231F20; } }
 
-.content {
-  margin-bottom: 30px;
-  line-height: 1.4; }
-  @media only screen and (min-width: 719px) {
-    .content {
-      margin-bottom: 50px;
-      line-height: 1.8; } }
-  .content h1,
-  .content h2,
-  .content h3,
-  .content h3,
-  .content h4,
-  .content h5,
-  .content h6 {
-    font-family: "National-Medium", Arial, sans-serif;
-    font-weight: 400; }
-  .content h4 {
-    font-size: 18px; }
-    @media only screen and (min-width: 719px) {
-      .content h4 {
-        margin-bottom: 20px;
-        font-size: 24px; } }
-  .content h6 {
-    font-size: 15px;
-    color: #2BC1D6; }
-    @media only screen and (min-width: 719px) {
-      .content h6 {
-        font-size: 18px; } }
-  .content p {
-    margin-bottom: 20px; }
-    @media only screen and (min-width: 719px) {
-      .content p {
-        margin-bottom: 40px; } }
-  .content img {
-    max-width: 100%; }
-  .content table {
-    max-width: 490px;
-    margin: 0 auto; }
-    .content table th,
-    .content table td {
-      padding: 15px 10px;
-      border: 1px solid #cccdd0;
-      text-align: center; }
-    .content table th {
-      font-family: "National-Semibold", Arial, sans-serif; }
+@media only screen and (min-width: 767px) {
+  .tabs__item {
+    display: none; } }
+
+@media only screen and (min-width: 767px) {
+  .tabs__item.is-active {
+    display: block; } }
 
 .counter {
   margin-bottom: 35px;
@@ -794,6 +890,9 @@ a {
     border: 1px solid #cccdd0;
     table-layout: fixed;
     font-size: 0; }
+    @media only screen and (min-width: 767px) {
+      .progress__wrap {
+        max-width: 320px; } }
     .progress__wrap:before {
       content: "";
       position: absolute;
@@ -992,7 +1091,8 @@ a {
     font-size: 18px; }
 
 .similar {
-  margin: 0 -20px; }
+  margin: 0 -20px;
+  font-size: 0; }
   @media only screen and (min-width: 719px) {
     .similar {
       margin: 0 -35px; } }
@@ -1005,11 +1105,17 @@ a {
       .similar__title {
         margin-bottom: 30px;
         font-size: 38px; } }
-  .similar__item {
+  .similar__slide {
     padding-left: 20px; }
     @media only screen and (min-width: 719px) {
-      .similar__item {
+      .similar__slide {
         padding-left: 35px; } }
+    @media only screen and (min-width: 1023px) {
+      .similar__slide {
+        padding: 0; } }
+  @media only screen and (min-width: 1023px) {
+    .similar__item {
+      margin: 0 auto; } }
 
 .shipping__nav {
   margin: 0 -20px 20px 0; }
