--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -10,5 +10,9 @@ html
 		//- wrapper
 		.wrapper(style="padding: 50px;")
 			div
+				a(href="/icons.html", target="_blank") icons.html
+			div
 				a(href="/main-page.html", target="_blank") main-page.html
+			div
+				a(href="/checkout.html", target="_blank") checkout.html
 				
