--- a/app/css/screen.css
+++ b/app/css/screen.css
@@ -538,8 +538,14 @@ a {
         padding-bottom: 30px; } }
     .slider__list .slick-prev {
       left: 10px; }
+      @media only screen and (min-width: 767px) {
+        .slider__list .slick-prev {
+          left: -25px; } }
     .slider__list .slick-next {
       right: 10px; }
+      @media only screen and (min-width: 767px) {
+        .slider__list .slick-next {
+          right: -25px; } }
   .slider__item {
     position: relative; }
   .slider__item-pic {
@@ -569,11 +575,16 @@ a {
         display: block; } }
     .slider__previews-item {
       width: 68px;
+      padding: 2px 0;
       text-align: center; }
     .slider__previews-img {
       max-width: 58px;
       max-height: 58px;
-      border: 1px solid #cccdd0; }
+      border: 1px solid #cccdd0;
+      cursor: pointer; }
+    .slick-center .slider__previews-img {
+      border-color: #2BC1D6;
+      box-shadow: 0 0 0 2px #2BC1D6; }
     .slider__previews .slick-prev {
       left: -25px; }
     .slider__previews .slick-next {
@@ -809,17 +820,146 @@ a {
     border: none;
     cursor: pointer; }
 
+.form {
+  margin-bottom: 40px; }
+  .form__title {
+    margin-bottom: 8px;
+    font-family: "National-Bold", Arial, sans-serif;
+    letter-spacing: 3px; }
+    @media only screen and (min-width: 1023px) {
+      .form__title {
+        margin-bottom: 30px; } }
+  .form__head {
+    *zoom: 1; }
+    .form__head:after {
+      content: " ";
+      display: table;
+      clear: both; }
+  .form__paysys {
+    float: right; }
+  .form__fieldset {
+    margin-bottom: 25px; }
+  @media only screen and (min-width: 1023px) {
+    .form__fieldset_row {
+      margin: 0 -10px 40px;
+      *zoom: 1; }
+      .form__fieldset_row:after {
+        content: " ";
+        display: table;
+        clear: both; } }
+  @media only screen and (min-width: 1023px) {
+    .form__field {
+      float: left;
+      width: 50%;
+      padding: 0 10px; } }
+  @media only screen and (min-width: 1023px) {
+    .form__field_lg {
+      width: 65%; } }
+  @media only screen and (min-width: 1023px) {
+    .form__field_sm {
+      width: 35%; } }
+  .form__btn {
+    width: 100%; }
+
+.field {
+  margin-bottom: 5px; }
+  .field__label {
+    margin-bottom: 5px;
+    font-size: 18px; }
+    @media only screen and (min-width: 719px) {
+      .field__label {
+        font-family: "National-Extrabold", Arial, sans-serif;
+        font-size: 20px; } }
+
+.input {
+  width: 100%;
+  height: 42px;
+  padding: 0 12px;
+  border: 1px solid #cccdd0;
+  border-radius: 2px;
+  font-family: "National-Light", Arial, sans-serif;
+  font-size: 18px; }
+
 .btn {
   height: 56px;
   padding: 0 20px;
   background: #EE4288;
   border-radius: 4px;
   font-family: "National-Light", Arial, sans-serif;
-  font-size: 24px;
+  font-size: 22px;
   color: #fff;
-  letter-spacing: 2px; }
+  letter-spacing: 1px; }
   .btn:hover {
     background: #ef4f8d; }
+  .btn:disabled {
+    background: #BCBDC0;
+    cursor: not-allowed; }
+
+.paysys {
+  font-size: 0; }
+  .paysys__item {
+    display: inline-block;
+    margin-left: 10px;
+    vertical-align: top; }
+    .paysys__item:first-child {
+      margin: 0; }
+  .paysys__logo {
+    width: 33px; }
+
+.card__wrap {
+  height: 42px;
+  padding: 0 12px;
+  border: 1px solid #cccdd0;
+  background: #FFF;
+  border-radius: 2px;
+  *zoom: 1; }
+  .card__wrap:after {
+    content: " ";
+    display: table;
+    clear: both; }
+
+.card__preview {
+  float: left;
+  width: 33px;
+  height: 22px;
+  margin: 10px 12px 0 0;
+  background: #cccdd0;
+  border-radius: 2px;
+  font-size: 0; }
+
+.card__logo {
+  width: 33px; }
+
+.card__number {
+  overflow: hidden; }
+
+.card__input {
+  width: 100%;
+  height: 40px;
+  font-family: "National-Light", Arial, sans-serif;
+  font-size: 18px; }
+
+.card__number_short {
+  float: left;
+  width: 65px; }
+
+.card__date {
+  float: left;
+  width: 65px; }
+
+.card__cvv {
+  float: left;
+  width: 65px; }
+
+.card__edit {
+  padding-top: 3px; }
+  .card__edit-link {
+    font-family: "National-LightItalic", Arial, sans-serif;
+    text-decoration: underline;
+    font-size: 14px;
+    color: #939598; }
+    .card__edit-link:hover {
+      text-decoration: none; }
 
 .tabs__nav {
   display: none;
@@ -835,7 +975,11 @@ a {
   padding: 0 10px;
   vertical-align: top;
   text-decoration: none;
-  text-align: center; }
+  text-align: center;
+  opacity: .7; }
+  .tabs__link:hover,
+  .tabs__link.is-active {
+    opacity: 1; }
   .tabs__link.is-active .tabs__link-title {
     border-color: #2BC1D6; }
   .tabs__link-icon {
@@ -870,13 +1014,14 @@ a {
       font-size: 26px;
       color: #231F20; } }
 
-@media only screen and (min-width: 767px) {
-  .tabs__item {
-    display: none; } }
-
-@media only screen and (min-width: 767px) {
-  .tabs__item.is-active {
-    display: block; } }
+.tabs__item {
+  position: relative; }
+  @media only screen and (min-width: 767px) {
+    .tabs__item {
+      display: none; } }
+  @media only screen and (min-width: 767px) {
+    .tabs__item.is-active {
+      display: block; } }
 
 .counter {
   margin-bottom: 35px;
@@ -1029,6 +1174,7 @@ a {
     margin: 0 8px 10px;
     background: #231F20;
     border-radius: 50%;
+    border: 2px solid #231F20;
     font-size: 0;
     color: #FFF;
     vertical-align: top; }
@@ -1037,6 +1183,13 @@ a {
         width: 54px;
         height: 54px;
         margin: 0 10px 10px; } }
+    .share__btn:hover {
+      background: #FFF;
+      color: #231F20; }
+    .share__btn:active {
+      background: #231F20;
+      color: #fff;
+      opacity: .7; }
     .share__btn .icon-twitter {
       font-size: 17px; }
       @media only screen and (min-width: 719px) {
@@ -1065,10 +1218,15 @@ a {
 
 .item {
   width: 276px;
-  border: 1px solid #cccdd0; }
+  border: 1px solid #cccdd0;
+  cursor: pointer; }
   @media only screen and (min-width: 719px) {
     .item {
       width: 290px; } }
+  .item:hover .item__wrap {
+    opacity: .6; }
+  .item:hover .item__progress-type {
+    font-family: "National-LightItalic", Arial, sans-serif; }
   .item__wrap {
     position: relative; }
   .item__price {
@@ -1089,7 +1247,8 @@ a {
         right: 18px;
         width: 46px;
         height: 46px;
-        font-size: 22px; } }
+        font-size: 22px;
+        line-height: 46px; } }
   .item__pic {
     display: block;
     max-width: 100%; }
@@ -1166,6 +1325,41 @@ a {
     .shipping__nav {
       margin: 0 0 30px;
       text-align: center; } }
+  @media only screen and (min-width: 767px) {
+    .shipping__nav {
+      position: absolute;
+      top: 5px;
+      right: 0; } }
+  .shipping__nav-head {
+    display: none;
+    font-family: "National-Medium", Arial, sans-serif;
+    color: #2BC1D6;
+    cursor: pointer; }
+    .shipping__nav-head:after {
+      content: "";
+      display: inline-block;
+      margin-left: 4px;
+      width: 0px;
+      height: 0px;
+      border-style: solid;
+      border-width: 5px 4.5px 0 4.5px;
+      border-color: #2BC1D6 transparent transparent transparent;
+      vertical-align: middle; }
+    @media only screen and (min-width: 767px) {
+      .shipping__nav-head {
+        display: block; } }
+  @media only screen and (min-width: 767px) {
+    .shipping__nav-list {
+      display: none;
+      position: absolute;
+      top: -6px;
+      right: -4px;
+      min-width: 100%;
+      background: #FFF;
+      border-radius: 4px;
+      border: 1px solid #cccdd0; }
+      .shipping__nav-list.is-active {
+        display: block; } }
 
 .shipping__link {
   display: inline-block;
@@ -1176,14 +1370,176 @@ a {
   text-decoration: none; }
   .shipping__link.is-active {
     text-decoration: underline; }
+    @media only screen and (min-width: 767px) {
+      .shipping__link.is-active {
+        background: rgba(43, 193, 214, 0.1); } }
   @media only screen and (min-width: 719px) {
     .shipping__link {
       margin: 0 25px 10px;
       font-size: 20px; } }
+  @media only screen and (min-width: 767px) {
+    .shipping__link {
+      display: block;
+      margin: 0;
+      padding: 5px 15px;
+      border-top: 1px solid #cccdd0;
+      font-size: 18px;
+      white-space: nowrap; }
+      .shipping__link:first-child {
+        border: none; } }
 
 .shipping__item {
   display: none; }
   .shipping__item.is-active {
     display: block; }
+
+.back {
+  margin-bottom: 15px; }
+  .back__link,
+  .back__title {
+    display: inline-block;
+    vertical-align: middle; }
+  .back__link {
+    text-decoration: none; }
+  .back__link:hover .back__title {
+    text-decoration: none; }
+  .back__title {
+    font-family: "National-LightItalic", Arial, sans-serif;
+    font-size: 17px;
+    text-decoration: underline; }
+  .back .icon {
+    margin-right: 5px;
+    font-size: 10px;
+    vertical-align: middle; }
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  min-width: 320px;
+  background: rgba(35, 31, 32, 0.4);
+  overflow: auto; }
+  @media only screen and (min-width: 719px) {
+    .popup {
+      padding: 35px 0; } }
+  .popup__in {
+    position: relative;
+    background: #FFF;
+    *zoom: 1; }
+    .popup__in:after {
+      content: " ";
+      display: table;
+      clear: both; }
+    @media only screen and (min-width: 719px) {
+      .popup__in:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 50%;
+        background: #F1F2F2; } }
+    @media only screen and (min-width: 767px) {
+      .popup__in:before {
+        left: 290px;
+        width: auto; } }
+  .popup__close {
+    display: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    background: #FFF;
+    border-radius: 50%;
+    font-family: "National-Extrabold", Arial, sans-serif;
+    font-size: 22px;
+    line-height: 30px;
+    z-index: 10; }
+    @media only screen and (min-width: 719px) {
+      .popup__close {
+        display: block; } }
+  .popup__section,
+  .popup__aside {
+    position: relative;
+    padding: 35px 25px 30px;
+    z-index: 2; }
+  @media only screen and (min-width: 719px) {
+    .popup__section {
+      float: right;
+      width: 50%; } }
+  @media only screen and (min-width: 767px) {
+    .popup__section {
+      width: 100%;
+      margin-left: -290px;
+      padding-left: 320px; } }
+  @media only screen and (min-width: 719px) {
+    .popup__aside {
+      overflow: hidden; } }
+  @media only screen and (min-width: 767px) {
+    .popup__aside {
+      max-width: 290px; } }
+
+.order {
+  padding-bottom: 50px; }
+  .order__title {
+    margin-bottom: 2px;
+    font-family: "National-Bold", Arial, sans-serif;
+    letter-spacing: 3px; }
+  .order__title-sub {
+    margin-bottom: 30px;
+    font-family: "National-LightItalic", Arial, sans-serif;
+    color: #EE4288; }
+  .order__item {
+    margin-bottom: 20px;
+    *zoom: 1; }
+    .order__item:after {
+      content: " ";
+      display: table;
+      clear: both; }
+  .order__preview {
+    float: left;
+    width: 70px;
+    margin-right: 20px; }
+  .order__pic {
+    display: block;
+    max-width: 100%; }
+  .order__info {
+    overflow: hidden; }
+  .order__name {
+    font-family: "National-Extrabold", Arial, sans-serif;
+    font-size: 18px; }
+  .order__options {
+    margin-bottom: 5px;
+    font-family: "National-LightItalic", Arial, sans-serif;
+    font-size: 16px;
+    color: #939598; }
+  .order__price {
+    text-align: right;
+    font-size: 18px; }
+  .order__stats {
+    margin-bottom: 2px;
+    *zoom: 1; }
+    .order__stats:after {
+      content: " ";
+      display: table;
+      clear: both; }
+    .order__stats-value {
+      float: right;
+      margin-left: 20px;
+      padding-top: 1px;
+      font-size: 18px; }
+    .order__stats-title {
+      display: table;
+      font-family: "National-Extrabold", Arial, sans-serif;
+      font-size: 20px; }
+    .order__stats_total {
+      padding-top: 20px; }
+    .order__stats_total .order__stats-value {
+      font-family: "National-Extrabold", Arial, sans-serif;
+      padding: 0;
+      font-size: 20px; }
 
 /*# sourceMappingURL=screen.css.map */
